# toydns-py

./: README.md  pyproject.toml
src/toydns_py/: __init__.py  dns.py  dns_test.py
