[project]
name = "toydns-py"
version = "0.1.0"
description = 'A simple DNS resolver inspired by "Implement DNS in a weekend" by Julia Evans'
authors = [
    { name = "miy4", email = "miy4@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
resolve = "toydns_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/toydns_py"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EXE", "T20", "E501", "D203", "D212", "ANN101", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

